docs(backend): add swagger documentation to notification
